fix: upload photo dialog fixes on mobile view (#145)

--- a/src/modules/gallery/containers/photo-upload-modal/photo-upload-modal.module.scss
+++ b/src/modules/gallery/containers/photo-upload-modal/photo-upload-modal.module.scss
@@ -13,7 +13,8 @@
 .dialogContent {
   @include mixins.phone {
     min-height: 100%;
-    border-radius: 0px;
+    border-radius: 0;
     width: 100%;
+    z-index: 150;
   }
 }
